2007-02-26  Srinivasa Ragavan <sragavan@novell.com>

	* NEWS, configure.in: Evolution-Exchange 2.9.92 release updates.

2007-02-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes BGO #393029 - Patch by Nathan Owens <pianocomp81@yahoo.com>

	calendar/e-cal-backend-exchange.c 
	(e_cal_backend_exchange_compute_changes_foreach_key): Check for
	non-NULL instead of NULL.
	
2007-02-26 Harish Krishnaswamy <kharish@novell.com>

	* configure.in : Update intltool version.

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

2007-02-19  Veerapuram Varadhan  <vvaradhan@novell.com>

	* Fixes BGO #400735

	configure.in:
	addressbook/Makefile.am:
	addressbook/e-book-backend-gal.c:
	addressbook/e-book-backend-db-cache.c:
	addressbook/e-book-backend-db-cache.h: Reverted the changes
	corresponding to GAL DB implementation.  Please read the bug for
	further information.
	
2007-02-12  Srinivasa Ragavan <sragavan@novell.com>

	* NEWS, configure.in: Evolution-Exchange 2.9.91 release updates.

2007-01-23  Veerapuram Varadhan  <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution-Exchange-2.9.6 release updates.

2007-01-22  Veerapuram Varadhan  <vvaradhan@novell.com>

	* configure.in: Check for the availability of libdb devel packages
	and provide "--with-libdb" parameter for custom locations of
	libdb.

	* addressbook/Makefile.am:  Do not hard-code libdb path - breaks
	build when libdb headers are not installed.
	
2007-01-12  Devashish Sharma <sdevashish@novell.com>

	* addressbook/e-book-backend-gal-cache.c : Committing DB based gal 
	cache with summary support.

	* addressbook/e-book-backend-db-cache.[ch] : Commiting the apis for
	using DB for caching.

2007-01-08  Harish Krishnaswamy <kharish@novell.com>

	* NEWS, configure.in: Evolution-Exchange-2.9.5 release updates.

2007-01-08  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes 346728, 268412

	* camel/camel-stub-constants.h: Define
	CAMEL_STUB_FOLDER_NOCHILDREN
	