@@ -1,3 +1,9 @@
+2007-02-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* addressbook/e-book-backend-gal.c: (parse_page_control):
+	Don't mark debug messages for translation. The strings are
+	hard enough to understand for the developers it seems.
+
 2007-02-26  Srinivasa Ragavan <sragavan@novell.com>
 
 	* NEWS, configure.in: Evolution-Exchange 2.9.92 release updates.
